--- a/Strings/AppResources.resx
+++ b/Strings/AppResources.resx
@@ -2607,4 +2607,28 @@ Check map for more information</value>
 {Title}
 Check map for more information</comment>
   </data>
+  <data name="UserAccountControl.Discord" xml:space="preserve">
+    <value>Discord Account</value>
+    <comment>Discord Account</comment>
+  </data>
+  <data name="UserAccountControl.Discord.Linked" xml:space="preserve">
+    <value>Your Discord account has been linked and you have access to our Pro-only Discord server</value>
+    <comment>Your Discord account has been linked and you have access to our Pro-only Discord server</comment>
+  </data>
+  <data name="UserAccountControl.Discord.Unlinked" xml:space="preserve">
+    <value>Link a Discord account to gain exclusive access to our Pro-only server</value>
+    <comment>Link a Discord account to gain exclusive access to our Pro-only server</comment>
+  </data>
+  <data name="UserAccountControl.DiscordLinked.Message" xml:space="preserve">
+    <value>Your Discord account has been linked. Do you want to join the Infinite Flight Discord server now?</value>
+    <comment>Your Discord account has been linked. Do you want to join the Infinite Flight Discord server now?</comment>
+  </data>
+  <data name="UserAccountControl.DiscordLinked.NotNow" xml:space="preserve">
+    <value>Not Now</value>
+    <comment>Not Now</comment>
+  </data>
+  <data name="UserAccountControl.DiscordLinked.Title" xml:space="preserve">
+    <value>Account Linked</value>
+    <comment>Account Linked</comment>
+  </data>
 </root>
