Improved Error Code 1 message in English

--- a/Strings/AppResources.resx
+++ b/Strings/AppResources.resx
@@ -246,8 +246,8 @@
     <comment>Global Server streaming has failed because your device storage is full</comment>
   </data>
   <data name="Error.UserNotFound" xml:space="preserve">
-    <value>This account isn't linked to an Infinite Flight Pro subscription (error code {0})</value>
-    <comment>This account isn't linked to an Infinite Flight Pro subscription (error code {0})</comment>
+    <value>This Infinite Flight Community account has not been used with the app before (error code {0})</value>
+    <comment>This Infinite Flight Community account has not been used with the app before (error code {0})</comment>
   </data>
   <data name="Global.CarryYourPassion" xml:space="preserve">
     <value>Carry your passion</value>
