--- a/Strings/AppResources.zh.resx
+++ b/Strings/AppResources.zh.resx
@@ -870,7 +870,7 @@
     <comment>You've connected {0} with Infinite Flight. Do you want to unlink this profile?</comment>
   </data>
   <data name="Settings.Account.DiscourseConnect" xml:space="preserve">
-    <value>通过Discord绑定</value>
+    <value>绑定账户</value>
     <comment>Connect (Discourse)</comment>
   </data>
   <data name="Settings.Account.Forum.LinkedAccount" xml:space="preserve">
